--- a/index.html
+++ b/index.html
@@ -102,6 +102,48 @@
         
     </div>
 </section>
+
+<section class="stats">
+    <div class="helping">
+        <h2>Helping a local </h2>
+        <h3>business reinvent itself</h3>
+        <p>We reached here with our hard work and dedication</p>
+    </div>
+    <div class="stats-sub">
+        <div>
+            <img src="images/Icon (4).png" alt="">
+            <span>
+                <h1>2,245,341</h1>
+                <p>Members</p>
+            </span>
+        </div>
+        <div>
+            <img src="images/Icon (5).png" alt="">
+            <span>
+                <h1>46,328</h1>
+                <p>Clubs</p>
+            </span>
+        </div>
+        <div>
+            <img src="images/Icon (8).png" alt="">
+            <span>
+                <h1>828,867</h1>
+                <p>Event Bookings</p>
+            </span>
+        </div>
+
+        <div>
+            <img src="images/Icon (10).png" alt="">
+            <span>
+                <h1>1,926,436</h1>
+                <p>Payments</p>
+            </span>
+        </div>
+    </div>
+</section>
+<section class="design">
+
+</section>
 </body>
 
 </html>
